import { Injectable, Logger } from '@nestjs/common';

// Placeholder DTOs and types
type CreateChatRoomDto = Record<string, unknown>;
type UpdateChatRoomDto = Record<string, unknown>;
// Updated AddRemoveParticipantDto to reflect expected userId
type AddRemoveParticipantDto = { userId: string; [key: string]: unknown };
type ChatRoomId = string;
type UserId = string;
type PlaceholderResult = { message: string; [key: string]: unknown };

// More specific types for event/message data
type MessageDataType = Record<string, unknown>;
type ReadDataType = Record<string, unknown>;
type TypingDataType = Record<string, unknown>;
type PaginationOptionsType = { limit?: number; offset?: number; [key: string]: unknown };


@Injectable()
export class AppService {
  private readonly logger = new Logger(AppService.name);

  // Simulating a WebSocket Emitter (would be injected in real app)
  private webSocketEmitter = {
    emitToRoom: (roomId: string, event: string, data: Record<string, unknown>) => {
      this.logger.log(`Emitting WS Event [${event}] to room [${roomId}]: ${JSON.stringify(data)}`);
    }
  };

  // Simulating a RabbitMQ client (would be injected)
  private rabbitMQClient = {
    emit: (pattern: string, data: Record<string, unknown>) => {
      this.logger.log(`Publishing RabbitMQ Event [${pattern}]: ${JSON.stringify(data)}`);
    }
  };

  // Simulating a gRPC client for message-service (would be injected)
  private messageServiceClient = {
    saveNewMessage: (data: Record<string, unknown>): Promise<Record<string, unknown>> => {
      this.logger.log(`Calling messageService.saveNewMessage with: ${JSON.stringify(data)}`);
      return Promise.resolve({ messageId: 'msg-from-message-service', ...data });
    },
    retrieveMessageHistory: (data: Record<string, unknown>): Promise<Record<string, unknown>[]> => {
      this.logger.log(`Calling messageService.retrieveMessageHistory for: ${JSON.stringify(data)}`);
      return Promise.resolve([{ messageId: 'hist-msg-1', content: 'Hello' }]);
    }
  };


  async createChatRoom(createChatRoomDto: CreateChatRoomDto): Promise<PlaceholderResult> {
    this.logger.log(`Creating chat room with DTO: ${JSON.stringify(createChatRoomDto)}`);
    const newRoomId = `room-${Date.now()}`;
    this.rabbitMQClient.emit('chat_room.created', { roomId: newRoomId, ...createChatRoomDto });
    return { message: 'Chat room creation placeholder', roomId: newRoomId };
  }

  async updateChatRoom(roomId: ChatRoomId, updateChatRoomDto: UpdateChatRoomDto): Promise<PlaceholderResult> {
    this.logger.log(`Updating chat room [${roomId}] with DTO: ${JSON.stringify(updateChatRoomDto)}`);
    return { message: `Chat room [${roomId}] update placeholder` };
  }

  async deleteChatRoom(roomId: ChatRoomId): Promise<PlaceholderResult> {
    this.logger.log(`Deleting chat room [${roomId}]`);
    return { message: `Chat room [${roomId}] deletion placeholder` };
  }

  async addParticipant(roomId: ChatRoomId, addParticipantDto: AddRemoveParticipantDto): Promise<PlaceholderResult> {
    // No longer need 'as any' as userId is part of AddRemoveParticipantDto type
    this.logger.log(`Adding participant [${addParticipantDto.userId}] to room [${roomId}]`);
    this.rabbitMQClient.emit('chat_room.user_joined', { roomId, userId: addParticipantDto.userId });
    return { message: `Participant addition to room [${roomId}] placeholder` };
  }

  async removeParticipant(roomId: ChatRoomId, userId: UserId): Promise<PlaceholderResult> {
    this.logger.log(`Removing participant [${userId}] from room [${roomId}]`);
    this.rabbitMQClient.emit('chat_room.user_left', { roomId, userId });
    return { message: `Participant [${userId}] removal from room [${roomId}] placeholder` };
  }

  async updateParticipantPermissions(roomId: ChatRoomId, userId: UserId, permissionsDto: Record<string, unknown>): Promise<PlaceholderResult> {
    this.logger.log(`Updating permissions for user [${userId}] in room [${roomId}]: ${JSON.stringify(permissionsDto)}`);
    return { message: `Permissions update for user [${userId}] in room [${roomId}] placeholder` };
  }

  async broadcastNewMessage(roomId: ChatRoomId, messageData: MessageDataType): Promise<void> {
    const persistedMessage = await this.messageServiceClient.saveNewMessage({ roomId, ...messageData });
    this.webSocketEmitter.emitToRoom(roomId, 'newMessage', persistedMessage);
    this.logger.log(`New message broadcasted to room [${roomId}]`);
  }

  async broadcastMessageRead(roomId: ChatRoomId, readData: ReadDataType): Promise<void> {
    // await this.messageServiceClient.updateMessageStatus({ ...readData, status: 'read' });
    this.webSocketEmitter.emitToRoom(roomId, 'messageRead', readData);
    this.logger.log(`Message read event broadcasted to room [${roomId}]`);
  }

  async broadcastUserTyping(roomId: ChatRoomId, typingData: TypingDataType): Promise<void> {
    this.webSocketEmitter.emitToRoom(roomId, 'userTyping', typingData);
    this.logger.log(`User typing event broadcasted to room [${roomId}]`);
  }

  async getMessageHistory(roomId: ChatRoomId, paginationOptions: PaginationOptionsType): Promise<Record<string, unknown>[]> {
    this.logger.log(`Fetching message history for room [${roomId}] with options: ${JSON.stringify(paginationOptions)}`);
    return this.messageServiceClient.retrieveMessageHistory({ roomId, ...paginationOptions });
  }
}
