import { Injectable, Logger } from '@nestjs/common';

// Placeholder types - define properly in .proto files and generated TS types
type MessageData = { content: string; senderId: string; chatRoomId: string; timestamp?: Date; attachmentsMetadata?: Record<string, unknown>[] };
type MessageId = string;
type ChatRoomId = string;
type PaginationOptions = { limit?: number; offset?: string | number; /* other options */ };
type MessageStatusUpdate = { messageId: MessageId; status: 'read' | 'deleted' | string; /* other fields */ };
type SearchQuery = { query: string; chatRoomId?: ChatRoomId; /* other filters */ };
type MessageObject = { id: MessageId } & MessageData;
type PlaceholderResult = { success: boolean; [key: string]: unknown };


@Injectable()
export class AppService {
  private readonly logger = new Logger(AppService.name);

  getHealth(): string {
    return 'Message service is healthy!';
  }

  // FR-MS-001: Responsible for persisting chat messages.
  // FR-MS-001.1: Store message content, sender ID, chat room ID, timestamp, attachments metadata.
  // FR-MS-002.1: gRPC - Save new messages.
  async saveNewMessage(data: MessageData): Promise<MessageObject> {
    this.logger.log(`Saving new message: ${JSON.stringify(data)}`);
    // Placeholder:
    // 1. Validate input data (based on .proto definition)
    // 2. Interact with DB (e.g., MongoDB/Cassandra) to store the message
    //    - Ensure schema matches FR-MS-001.1
    const messageId = `msg-${Date.now()}`;
    const persistedMessage: MessageObject = { id: messageId, ...data, timestamp: new Date() };
    this.logger.log(`Message persisted with ID: ${messageId}`);
    return persistedMessage;
  }

  // FR-MS-002.2: gRPC - Retrieve message history for a chat room (with pagination).
  async retrieveMessageHistory(chatRoomId: ChatRoomId, pagination: PaginationOptions): Promise<MessageObject[]> {
    this.logger.log(`Retrieving message history for room [${chatRoomId}] with pagination: ${JSON.stringify(pagination)}`);
    // Placeholder:
    // 1. Interact with DB to fetch messages for the room, applying pagination.
    return [{
      id: `msg-${Date.now()}`,
      content: 'Placeholder message 1',
      senderId: 'user1',
      chatRoomId: chatRoomId,
      timestamp: new Date()
    }];
  }

  // FR-MS-002.3: gRPC - Update message status (e.g., read, deleted).
  // FR-MS-003: Handle message editing and deletion logic (soft/hard delete).
  // FR-MS-004: Manage message read receipts.
  async updateMessageStatus(statusUpdate: MessageStatusUpdate): Promise<PlaceholderResult> {
    this.logger.log(`Updating message status: ${JSON.stringify(statusUpdate)}`);
    // Placeholder:
    // 1. Interact with DB to find message and update its status.
    // 2. Implement logic for soft/hard delete based on status.
    // 3. If status is 'read', this contributes to FR-MS-004.
    return { success: true, messageId: statusUpdate.messageId, newStatus: statusUpdate.status };
  }

  // FR-MS-002.4: gRPC - Search messages.
  async searchMessages(query: SearchQuery): Promise<MessageObject[]> {
    this.logger.log(`Searching messages with query: ${JSON.stringify(query)}`);
    // Placeholder:
    // 1. Interact with DB to perform search (full-text or field-based).
    return [{
      id: `msg-search-${Date.now()}`,
      content: `Found message for query: ${query.query}`,
      senderId: 'user-search',
      chatRoomId: query.chatRoomId || 'any-room',
      timestamp: new Date()
    }];
  }

  // FR-MS-003: Message editing logic (could be part of UpdateMessage or a dedicated method)
  async editMessage(messageId: MessageId, newContent: string): Promise<MessageObject | null> {
    this.logger.log(`Editing message [${messageId}] with new content: ${newContent}`);
    // Placeholder:
    // 1. Find message by ID in DB.
    // 2. Verify permissions if applicable.
    // 3. Update content.
    // 4. Return updated message or null if not found/editable.
    return {
        id: messageId,
        content: newContent,
        senderId: 'user-edit',
        chatRoomId: 'room-edit',
        timestamp: new Date()
    };
  }
}
